--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,18 +3,53 @@
   <h1>
     Welcome to {{ title }}!
   </h1>
-  <img width="300" alt="App Logo" src="htt">
+  <img height="300" alt="App Logo" src="/assets/images/tangled.jpg">
+  <div style="width: 300px; margin:0 auto; margin-top: 10px">
+    <button *ngIf="!message"  class="btn btn-primary" (click)="showLogin(loginInfo)">Login</button>
+    <div *ngIf="message" class="alert alert-success" role="alert">
+      {{message}}
+    </div>
+  </div>
 </div>
-<h2>Here are some links to help you start: </h2>
-<ul>
-  <li>
-    <h2><a target="_blank" rel="noopener" href="https://angular.io/tutorial">Tour of Heroes</a></h2>
-  </li>
-  <li>
-    <h2><a target="_blank" rel="noopener" href="https://github.com/angular/angular-cli/wiki">CLI Documentation</a></h2>
-  </li>
-  <li>
-    <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
-  </li>
-</ul>
+<ng-template #loginInfo let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title">Enter Login Details</h4>
+    <button type="button" class="close" (click)="d('Cross click')">
+      <span>&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <div *ngIf="modalMsg" class="alert alert-danger" role="alert">
+      {{modalMsg}}
+    </div>
+
+    <form [formGroup]="loginForm" >
+      <div class="form-group">
+        <label>Username</label>
+        <input type="text" formControlName="username" placeholder="Username" class="form-control">
+        <div *ngIf="loginForm.controls.username.errors && loginForm.controls.username.touched">
+          <p *ngIf="loginForm.controls.username.errors.required">Username is required</p>
+          <p *ngIf="loginForm.controls.username.errors.invalidEmail">Pleasse enter valid Email</p>
+        </div>
+      </div>
+      <div class="form-group">
+        <label>Password</label>
+        <input type="password" formControlName="password" placeholder="Password" class="form-control">
+        <div *ngIf="loginForm.controls.password.errors && loginForm.controls.password.touched">
+          <p *ngIf="loginForm.controls.password.errors.required">Password is required</p>
+          <p *ngIf="loginForm.controls.password.errors.minlength">Minimum length is atleast 6</p>
+          <p *ngIf="loginForm.controls.password.errors.maxlength">Maximun length of password is 10</p>
+        </div>
+      </div>
+
+    </form>
+
+  </div>
+  <div class="modal-footer">
+    <button (click)="validateLogin()" class="btn btn-primary">Login</button>
+    <button type="button" class="btn btn-outline-dark" (click)="c('Close click')">Close</button>
+  </div>
+
+</ng-template>
+
 
